--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,18 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% if site.google_analytics %}
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.google_analytics }}');
+</script>
+<!-- End Google Analytics -->
+{% endif %}
   </head>
 
   <body>
