--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,15 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     {% if site.google_analytics %}
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R0286NCHB1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', 'G-R0286NCHB1');
 </script>
-<!-- End Google Analytics -->
 {% endif %}
   </head>
 
